--- a/Django/django02/templates/company/host.html
+++ b/Django/django02/templates/company/host.html
@@ -50,6 +50,8 @@
 			</tr>
 			{% endfor %}
 		</table>
+		<h4>总条数:{{ count }}</h4>
+		{{ page }}
 	</div>
 	<p><a href='/company/index'>index</a></p>
 </body>
