--- a/Django/django02/templates/company/index.html
+++ b/Django/django02/templates/company/index.html
@@ -6,11 +6,13 @@
 
 <body>
 	<h1>欢迎登陆主机管理系统</h1>
-
+	{{ username }}
 	<ul>
 		<li><a href='/company/user'>用户管理</a></li>
 		<li><a href='/company/group'>用户组管理</a></li>
 		<li><a href='/company/host'>主机管理</a></li>
+		<li></li>
+		<li><a href='/company/logout'>退出</a></li>
 	</ul>
 </body>
 
