--- a/Django/django02/templates/company/host.html
+++ b/Django/django02/templates/company/host.html
@@ -74,6 +74,15 @@
 		<div id='Pageing'>
 			{{ page }}
 		</div>
+		
+		<div>
+			<select>
+				<option values='5'>5</option>
+				<option values='10'>10</option>
+				<option values='20'>20</option>
+				<option values='50'>50</option>
+			</select>
+		</div>
 	</div>
 	<p><a href='/company/index'>index</a></p>
 </body>
