--- a/Django/django02/templates/company/host.html
+++ b/Django/django02/templates/company/host.html
@@ -22,6 +22,7 @@
 		}
 	
 	</style>
+
 </head>
 
 <body>
@@ -74,9 +75,9 @@
 		<div id='Pageing'>
 			{{ page }}
 		</div>
-		
+		<br/>
 		<div>
-			<select>
+			<select id='btnselect'>
 				<option values='5'>5</option>
 				<option values='10'>10</option>
 				<option values='20'>20</option>
@@ -87,4 +88,21 @@
 	<p><a href='/company/index'>index</a></p>
 </body>
 
+	<script type="text/javascript" src='/static/js/jquery-1.8.2.min.js'></script>
+	<script type="text/javascript" src='/static/js/jquery.cookie.js'></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			
+			var per_item=$.cookie('pager_num')
+			if (per_item){
+				$('#btnselect').val(per_item);
+			}
+			
+			$("#btnselect").change(function(args){
+			  	var temp=$(this).children('option:selected').val();
+				$.cookie('pager_num',temp,{path:'/'});
+			})
+	  	});
+	</script>
+	
 </html>
