--- a/Django/django02/templates/company/login.html
+++ b/Django/django02/templates/company/login.html
@@ -6,6 +6,9 @@
 
 <body>
 	<form action='/company/login/' method='POST'>
+		
+		{% csrf_token %} 
+	
 		<div>
 			<div>
 				<input name='username' placeholder='用户名'/>
